--- a/index.html
+++ b/index.html
@@ -5,26 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <!-- <script type="text/javascript" src="modules/lodash.min.js"></script>
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
     <script type="text/javascript" src="modules/test-boilerplate.js"></script> -->
   </head>
 
-  <!-- <body>
-    <h1>きょうの　すみっこぐらし</h1>
-    <h2>０～９の<strong>すうじ</strong>をいれてね</h2>
-    <form action="#">
-      <div>
-        <label for="email">したのしかくににゅうりょく</label>
-        <br>
-        <input type="text" name="input" id="input">
-      </div>
-      <button type="reset">リセット</button>
-      <br>
-      <button type="button" onclick = "function getNUmber(inputNumber)">Let's try!!</button>
-    </form>
-    <div id="output">なにがでるかな？？？</div>
-  </body>  
-</html> -->
 
 <title>きょうのすみっこぐらし</title>
 
