--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
-    <script type="text/javascript" src="modules/test-boilerplate.js"></script> -->
+    <script type="text/javascript" src="modules/test-boilerplate.js"></script>
   </head>
 
 
