--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <input type="button" value="Let's try!!" onclick="getNumber()">
     </form>
     <p id="output">なにがでるかな？？？</p>
-    <div id="outputImage">ここのきょうのすみっこがでます</div>
+    <div id="outputImage">ここにきょうのすみっこがでます</div>
 
     <script type="text/javascript" src="script.js"></script>
 
